--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
             <div class="serviceSection2">
                 <div class="serviceLogoTitle">
                     <img class="serviceImage2" src="IMAGES/serviceImage2.png">
-                    <h1 class="serviceHeading">Life Fortune</h1>
+                    <h1 class="serviceHeading" id="lifeFortuneTitle">Life Fortune</h1>
                 </div>
                 <div class="servicesBlock">
                     <p>
-                        Monthly Comprehensive <br>
-                        2024 Shinto Maintenance <br>
-                        Lifetime Fortune <br>
-                        Getting rich in 2024 <br>
+                        Today's Horoscope <br>
+                        Weekly Comprehensive <br>
+                        Tarot of Day <br>
+                        Premium Lotto <br>
                     </p>
                 </div>
                 <button class="tryThisBtn">Try This!</button>
@@ -129,7 +129,7 @@
                 </div>
                 <button class="tryThisBtn">Try This!</button>
             </div>
-        </div>     
+        </div>
 
     </container>
 
