Finalized Header and Footer

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 <body>
     <header class="mainHeader">
         <div class="logoBar">
-            <h1 class="logoTitle">CosmoGem</h1>
-            <img class="logoImage" src="IMAGES/logo.png">
+            <a href="index.html">
+                <h1 class="logoTitle">CosmoGem</h1>
+                <img class="logoImage" src="IMAGES/logo.png">
+            </a>
         </div>
         <nav class="navbar">
             <div class="menus">
@@ -87,7 +89,7 @@
             <div class="serviceSection1">
                 <div class="serviceLogoTitle">
                     <img class="serviceImage1" src="IMAGES/serviceImage1.png">
-                    <h1 class="serviceHeading">Authentic Fortune Telling</h1> 
+                    <h1 class="serviceHeading">Authentic Fortune Telling</h1>
                 </div>
                 <div class="servicesBlock">
                     <p>
