added fortuneTelling Page

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
                         Getting rich in 2024 <br>
                     </p>
                 </div>
-                <button class="tryThisBtn">Try This!</button>
+                <a href="HTML/authenticFortuneTelling.html">
+                    <button class="tryThisBtn">Try This!</button>
+                </a>
             </div>
             <div class="serviceSection2">
                 <div class="serviceLogoTitle">
@@ -162,12 +164,12 @@
                     <div class="footer-column" id="contactInfo">
                         <h3>Contact Info</h3>
                         <p>477 Jehovah Drive<br>Lexington, VA 24450</p>
-                        <div class="social-icons">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-xing"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
+                        <div class="footerSocials">
+                            <a href="#"><i class="fab fa-facebook-f"><img class="footerSocialIcons" src="IMAGES/facebookLogo.png"></i></a>
+                            <a href="#"><i class="fab fa-xing"><img class="footerSocialIcons" src="IMAGES/twitterLogo.png"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"><img class="footerSocialIcons" src="IMAGES/linkedinLogo.png"></i></a>
+                            <a href="#"><i class="fab fa-youtube"><img class="footerSocialIcons" src="IMAGES/youtubeLogo.png"></i></a>
+                            <a href="#"><i class="fab fa-instagram"><img class="footerSocialIcons" src="IMAGES/instagramLogo.png"></i></a>
                         </div>
                     </div>
                 </div>
