added shintoMaintenance page

--- a/HTML/shintoMaintenance.html
+++ b/HTML/shintoMaintenance.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CosmoGem</title>
-    <link rel="stylesheet" href="../CSS/authenticFortuneTelling.css">
+    <link rel="stylesheet" href="../CSS/shintoMaintenance.css">
     <link rel="icon" href="../IMAGES/logo.png" type="image/icon type">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,8 +45,8 @@
     <container>
         <div class="banner">
             <div class="bannerText">
-                <h1 class="bannerTitle">Authentic Fortune Telling</h1>
-                <p class="pathLink">HomePage&emsp;&gt;&emsp;Authentic Fortune Telling</p>
+                <h1 class="bannerTitle">2024 Shinto Maintenance</h1>
+                <p class="pathLink">HomePage&emsp;&gt;&emsp;2024 Shinto Maintenance</p>
             </div>
             <div class="imageBanner">
                 <img class="bannerImage" src="../IMAGES/authenticFortuneTellingBanner.png">
@@ -54,20 +54,19 @@
         </div>
         <div class="aboutUs">
             <div class="subMenu">
-                <a class="subMenuItems" id="active-subMenu" href="#">Lifetime Fortune</a>
-                <a class="subMenuItems" href="../HTML/shintoMaintenance.html">2024 Shinto Maintenance</a>
+                <a class="subMenuItems" href="../HTML/authenticFortuneTelling.html">Lifetime Fortune</a>
+                <a class="subMenuItems" id="active-subMenu" href="../HTML/shintoMaintenance.html">2024 Shinto Maintenance</a>
                 <a class="subMenuItems" href="#">Monthly Comprehensive</a>
                 <a class="subMenuItems" href="#">Getting rich in 2024</a>
             </div>
             <div class="lifetimeFortuneDescription">
-                <h1>Lifetime Fortune</h1>
-                <p>Discover your life's fortune and anticipate what lies ahead.
-                    Remember, the events of a single year do not define your entire life.
-                    This insight is structured into six themes: early life, middle life,
-                    later years, siblings, children, relationships, and career.
-                    By understanding and embracing your natural destiny, you can navigate
-                    your future more wisely. Only those who understand and feel confident
-                    about their own path can achieve true wisdom.
+                <h1>2024 Shinto Maintenance</h1>
+                <p>Based on Tojeong Lee Ji-ham's book of fortune telling, the 144 hexagrams have been reinterpreted with 
+                    a modern perspective. This new approach to fortune telling offers fresh insights by analyzing life's 
+                    fortunes using these hexagrams. While the Millennium Secret represented the fortune telling of the 
+                    past, today's world requires a new paradigm. This reinterpretation aims to be a guide for your new year. 
+                    Remember that Tojeong Bigyeol and New Year's Fortune telling are distinct divinations with different 
+                    interpretation methods.
                 </p>
             </div>
             <div class="formSection">
