Authentic FortuneTelling part Completed

--- a/HTML/gettingRich2024.html
+++ b/HTML/gettingRich2024.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CosmoGem</title>
-    <link rel="stylesheet" href="../CSS/shintoMaintenance.css">
+    <link rel="stylesheet" href="../CSS/gettingRich2024.css">
     <link rel="icon" href="../IMAGES/logo.png" type="image/icon type">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,8 +45,8 @@
     <container>
         <div class="banner">
             <div class="bannerText">
-                <h1 class="bannerTitle">2024 Shinto Maintenance</h1>
-                <p class="pathLink">HomePage&emsp;&gt;&emsp;2024 Shinto Maintenance</p>
+                <h1 class="bannerTitle">Getting Rich in 2024</h1>
+                <p class="pathLink">HomePage&emsp;&gt;&emsp;Getting Rich 2024</p>
             </div>
             <div class="imageBanner">
                 <img class="bannerImage" src="../IMAGES/authenticFortuneTellingBanner.png">
@@ -55,24 +55,25 @@
         <div class="aboutUs">
             <div class="subMenu">
                 <a class="subMenuItems" href="../HTML/lifetimeFortune.html">Lifetime Fortune</a>
-                <a class="subMenuItems" id="active-subMenu" href="../HTML/shintoMaintenance.html">2024 Shinto Maintenance</a>
+                <a class="subMenuItems" href="../HTML/shintoMaintenance.html">2024 Shinto Maintenance</a>
                 <a class="subMenuItems" href="../HTML/monthlyComprehensive.html">Monthly Comprehensive</a>
-                <a class="subMenuItems" href="../HTML/gettingRich2024.html">Getting rich in 2024</a>
+                <a class="subMenuItems" id="active-subMenu" href="../HTML/gettingRich2024.html">Getting rich in 2024</a>
             </div>
             <div class="lifetimeFortuneDescription">
-                <h1>2024 Shinto Maintenance</h1>
-                <p>Based on Tojeong Lee Ji-ham's book of fortune telling, the 144 hexagrams have been reinterpreted with 
-                    a modern perspective. This new approach to fortune telling offers fresh insights by analyzing life's 
-                    fortunes using these hexagrams. While the Millennium Secret represented the fortune telling of the 
-                    past, today's world requires a new paradigm. This reinterpretation aims to be a guide for your new year. 
-                    Remember that Tojeong Bigyeol and New Year's Fortune telling are distinct divinations with different 
-                    interpretation methods.
+                <h1>Getting Rich in 2024</h1>
+                <p>A specialized fortune analysis to grasp the flow of wealth! 
+                    How much wealth do you naturally possess? This analysis focuses 
+                    specifically on wealth management and its strategic use. Did you know 
+                    that the fortunes of the rich and poor are essentially the same? Only 
+                    those who wisely leverage the right timing can tap into the hidden 
+                    potential of wealth in their fortune. By understanding the right 
+                    moments, you can unlock the path to prosperity.
                 </p>
             </div>
             <div class="formSection">
                 <h4>Please fill in your details:</h4>
                 <form action="https://shinhanlife.sinbiun.com/unse/good_luck.php" method="post" name="fwrite">
-                    <input id="unse_code" name="unse_code" type="hidden" value="A104" />
+                    <input id="unse_code" name="unse_code" type="hidden" value="A102" />
                     <input id="specific_year" name="specific_year" type="hidden" value="2024" />
                     <input id="specific_month" name="specific_month" type="hidden" value="06" />
                     <input id="specific_day" name="specific_day" type="hidden" value="20" />
