--- a/HTML/lifetimeFortune.html
+++ b/HTML/lifetimeFortune.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CosmoGem</title>
-    <link rel="stylesheet" href="../CSS/authenticFortuneTelling.css">
+    <link rel="stylesheet" href="../CSS/lifetimeFortune.css">
     <link rel="icon" href="../IMAGES/logo.png" type="image/icon type">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +46,7 @@
         <div class="banner">
             <div class="bannerText">
                 <h1 class="bannerTitle">Authentic Fortune Telling</h1>
-                <p class="pathLink">HomePage&emsp;&gt;&emsp;Authentic Fortune Telling</p>
+                <p class="pathLink">HomePage&emsp;&gt;&emsp;Lifetime Fortune</p>
             </div>
             <div class="imageBanner">
                 <img class="bannerImage" src="../IMAGES/authenticFortuneTellingBanner.png">
@@ -56,8 +56,8 @@
             <div class="subMenu">
                 <a class="subMenuItems" id="active-subMenu" href="#">Lifetime Fortune</a>
                 <a class="subMenuItems" href="../HTML/shintoMaintenance.html">2024 Shinto Maintenance</a>
-                <a class="subMenuItems" href="#">Monthly Comprehensive</a>
-                <a class="subMenuItems" href="#">Getting rich in 2024</a>
+                <a class="subMenuItems" href="../HTML/monthlyComprehensive.html">Monthly Comprehensive</a>
+                <a class="subMenuItems" href="../HTML/gettingRich2024.html">Getting rich in 2024</a>
             </div>
             <div class="lifetimeFortuneDescription">
                 <h1>Lifetime Fortune</h1>
@@ -73,7 +73,7 @@
             <div class="formSection">
                 <h4>Please fill in your details:</h4>
                 <form action="https://shinhanlife.sinbiun.com/unse/good_luck.php" method="post" name="fwrite">
-                    <input id="unse_code" name="unse_code" type="hidden" value="A102" />
+                    <input id="unse_code" name="unse_code" type="hidden" value="A042" />
                     <input id="specific_year" name="specific_year" type="hidden" value="2024" />
                     <input id="specific_month" name="specific_month" type="hidden" value="06" />
                     <input id="specific_day" name="specific_day" type="hidden" value="20" />
