--- a/HTML/monthlyComprehensive.html
+++ b/HTML/monthlyComprehensive.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CosmoGem</title>
-    <link rel="stylesheet" href="../CSS/shintoMaintenance.css">
+    <link rel="stylesheet" href="../CSS/monthlyComprehensive.css">
     <link rel="icon" href="../IMAGES/logo.png" type="image/icon type">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,8 +45,8 @@
     <container>
         <div class="banner">
             <div class="bannerText">
-                <h1 class="bannerTitle">2024 Shinto Maintenance</h1>
-                <p class="pathLink">HomePage&emsp;&gt;&emsp;2024 Shinto Maintenance</p>
+                <h1 class="bannerTitle">Monthly Comprehensive Horoscope</h1>
+                <p class="pathLink">HomePage&emsp;&gt;&emsp;Monthly Comprehensive Horoscope</p>
             </div>
             <div class="imageBanner">
                 <img class="bannerImage" src="../IMAGES/authenticFortuneTellingBanner.png">
@@ -55,24 +55,25 @@
         <div class="aboutUs">
             <div class="subMenu">
                 <a class="subMenuItems" href="../HTML/lifetimeFortune.html">Lifetime Fortune</a>
-                <a class="subMenuItems" id="active-subMenu" href="../HTML/shintoMaintenance.html">2024 Shinto Maintenance</a>
-                <a class="subMenuItems" href="../HTML/monthlyComprehensive.html">Monthly Comprehensive</a>
+                <a class="subMenuItems" href="../HTML/shintoMaintenance.html">2024 Shinto Maintenance</a>
+                <a class="subMenuItems" id="active-subMenu" href="../HTML/monthlyComprehensive.html">Monthly Comprehensive</a>
                 <a class="subMenuItems" href="../HTML/gettingRich2024.html">Getting rich in 2024</a>
             </div>
             <div class="lifetimeFortuneDescription">
-                <h1>2024 Shinto Maintenance</h1>
-                <p>Based on Tojeong Lee Ji-ham's book of fortune telling, the 144 hexagrams have been reinterpreted with 
-                    a modern perspective. This new approach to fortune telling offers fresh insights by analyzing life's 
-                    fortunes using these hexagrams. While the Millennium Secret represented the fortune telling of the 
-                    past, today's world requires a new paradigm. This reinterpretation aims to be a guide for your new year. 
-                    Remember that Tojeong Bigyeol and New Year's Fortune telling are distinct divinations with different 
-                    interpretation methods.
+                <h1>Monthly Comprehensive Horoscope</h1>
+                <p>Let's manage your fortune for the month! This year's fortune might be 
+                    neutral, but not every month is the same. I've provided a general 
+                    overview for this month, covering seven key themes like wealth, love, 
+                    health, and lucky days, along with detailed explanations. The focus is 
+                    on practical advice that can be applied to real life to transform 
+                    negative energy. Additionally, a Sajoo calendar is included, 
+                    highlighting the daily financial trends and days to avoid this month.
                 </p>
             </div>
             <div class="formSection">
                 <h4>Please fill in your details:</h4>
                 <form action="https://shinhanlife.sinbiun.com/unse/good_luck.php" method="post" name="fwrite">
-                    <input id="unse_code" name="unse_code" type="hidden" value="A104" />
+                    <input id="unse_code" name="unse_code" type="hidden" value="A103" />
                     <input id="specific_year" name="specific_year" type="hidden" value="2024" />
                     <input id="specific_month" name="specific_month" type="hidden" value="06" />
                     <input id="specific_day" name="specific_day" type="hidden" value="20" />
