--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         Getting rich in 2024 <br>
                     </p>
                 </div>
-                <a href="HTML/authenticFortuneTelling.html">
+                <a href="HTML/lifetimeFortune.html">
                     <button class="tryThisBtn">Try This!</button>
                 </a>
             </div>
