--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
                         Premium Lotto <br>
                     </p>
                 </div>
-                <button class="tryThisBtn">Try This!</button>
+                <a href="HTML/todayHoroscope.html">
+                    <button class="tryThisBtn">Try This!</button>
+                </a>
             </div>
             <div class="serviceSection3">
                 <div class="serviceLogoTitle">
