--- a/HTML/lifetimeFortune.html
+++ b/HTML/lifetimeFortune.html
@@ -22,7 +22,7 @@
 <body>
     <header class="mainHeader">
         <div class="logoBar">
-            <a href="index.html">
+            <a href="../index.html">
                 <h1 class="logoTitle">CosmoGem</h1>
                 <img class="logoImage" src="../IMAGES/logo.png">
             </a>
