--- a/HTML/weeklyComprehensive.html
+++ b/HTML/weeklyComprehensive.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CosmoGem</title>
-    <link rel="stylesheet" href="../CSS/monthlyComprehensive.css">
+    <link rel="stylesheet" href="../CSS/todayHoroscope.css">
     <link rel="icon" href="../IMAGES/logo.png" type="image/icon type">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,8 +45,8 @@
     <container>
         <div class="banner">
             <div class="bannerText">
-                <h1 class="bannerTitle">Monthly Comprehensive Horoscope</h1>
-                <p class="pathLink">HomePage&emsp;&gt;&emsp;Monthly Comprehensive Horoscope</p>
+                <h1 class="bannerTitle">Weekly Comprehensive Horoscope</h1>
+                <p class="pathLink">HomePage&emsp;&gt;&emsp;Weekly Comprehensive Horoscope</p>
             </div>
             <div class="imageBanner">
                 <img class="bannerImage" src="../IMAGES/authenticFortuneTellingBanner.png">
@@ -54,26 +54,22 @@
         </div>
         <div class="aboutUs">
             <div class="subMenu">
-                <a class="subMenuItems" href="../HTML/lifetimeFortune.html">Lifetime Fortune</a>
-                <a class="subMenuItems" href="../HTML/shintoMaintenance.html">2024 Shinto Maintenance</a>
-                <a class="subMenuItems" id="active-subMenu" href="../HTML/monthlyComprehensive.html">Monthly Comprehensive</a>
-                <a class="subMenuItems" href="../HTML/gettingRich2024.html">Getting rich in 2024</a>
+                <a class="subMenuItems" href="../HTML/todayHoroscope.html">Today's Horoscope</a>
+                <a class="subMenuItems" href="../HTML/premiumLotto.html">Premium Lotto</a>
+                <a class="subMenuItems" id="active-subMenu" href="../HTML/weeklyComprehensive.html">Weekly Comprehensive</a>
             </div>
             <div class="lifetimeFortuneDescription">
-                <h1>Monthly Comprehensive Horoscope</h1>
-                <p>Let's manage your fortune for the month! This year's fortune might be 
-                    neutral, but not every month is the same. I've provided a general 
-                    overview for this month, covering seven key themes like wealth, love, 
-                    health, and lucky days, along with detailed explanations. The focus is 
-                    on practical advice that can be applied to real life to transform 
-                    negative energy. Additionally, a Sajoo calendar is included, 
-                    highlighting the daily financial trends and days to avoid this month.
+                <h1>Weekly Comprehensive Horoscope</h1>
+                <p>Easily understand the week's flow and make the most of it. We've outlined six key 
+                    themes—general overview, wealth, lottery fortune, love, health, and practical 
+                    advice—to offer direct support for your week. Review the upcoming luck in advance 
+                    and get ready for a vibrant and successful week.
                 </p>
             </div>
             <div class="formSection">
                 <h4>Please fill in your details:</h4>
                 <form action="https://shinhanlife.sinbiun.com/unse/good_luck.php" method="post" name="fwrite">
-                    <input id="unse_code" name="unse_code" type="hidden" value="A103" />
+                    <input id="unse_code" name="unse_code" type="hidden" value="A040" />
                     <input id="specific_year" name="specific_year" type="hidden" value="2024" />
                     <input id="specific_month" name="specific_month" type="hidden" value="06" />
                     <input id="specific_day" name="specific_day" type="hidden" value="20" />
